footer text align fix

--- a/src/pages/landing/index.scss
+++ b/src/pages/landing/index.scss
@@ -108,6 +108,7 @@ main {
 
             h4 {
                 font-size: 4.8rem;
+                text-align: center;
             }
             p{
                 font-size: 1.4rem;
